--- a/static/index.html
+++ b/static/index.html
@@ -13,84 +13,47 @@
     <link rel="canonical" href="https://openagents.com"/>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/htmx.min.js"></script>
+    <script src="js/client-side-templates.js"></script>
+    <script src="js/mustache.js"></script>
 </head>
 
 <body class="bg-black text-white font-mono max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
     <div class="container mx-auto">
-        <!-- Static header that never changes -->
-        <header class="py-2 mb-5" id="static-header">
+        <header class="py-2 mb-5">
             <div class="flex justify-between items-center w-full">
                 <span class="text-lg font-bold">OpenAgents</span>
             </div>
             <div class="mt-4">
-                <nav>
-                    <ul class="grid grid-cols-3 gap-2 lg:grid-cols-6" id="nav-buttons">
-                        <li class="flex justify-center mb-1">
-                            <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
-                               href="/"
-                               hx-get="/"
-                               hx-push-url="true"
-                               hx-target="#page-content"
-                               hx-select="#page-content"
-                               hx-swap="innerHTML show:top">Home</a>
-                        </li>
-                        <li class="flex justify-center mb-1">
-                            <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
-                               href="/mobile-app"
-                               hx-get="/mobile-app"
-                               hx-push-url="true"
-                               hx-target="#page-content"
-                               hx-select="#page-content"
-                               hx-swap="innerHTML show:top">Mobile App</a>
-                        </li>
-                        <li class="flex justify-center mb-1">
-                            <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
-                               href="/business"
-                               hx-get="/business"
-                               hx-push-url="true"
-                               hx-target="#page-content"
-                               hx-select="#page-content"
-                               hx-swap="innerHTML show:top">Services</a>
-                        </li>
-                        <li class="flex justify-center mb-1">
-                            <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
-                               href="/video-series"
-                               hx-get="/video-series"
-                               hx-push-url="true"
-                               hx-target="#page-content"
-                               hx-select="#page-content"
-                               hx-swap="innerHTML show:top">Video Series</a>
-                        </li>
-                        <li class="flex justify-center mb-1">
-                            <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
-                               href="/company"
-                               hx-get="/company"
-                               hx-push-url="true"
-                               hx-target="#page-content"
-                               hx-select="#page-content"
-                               hx-swap="innerHTML show:top">Company</a>
-                        </li>
-                        <li class="flex justify-center mb-1">
-                            <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
-                               href="/contact"
-                               hx-get="/contact"
-                               hx-push-url="true"
-                               hx-target="#page-content"
-                               hx-select="#page-content"
-                               hx-swap="innerHTML show:top">Contact</a>
-                        </li>
-                    </ul>
+                <nav hx-ext="client-side-templates">
+                    <div id="nav-buttons"
+                         hx-get="/templates/header.json"
+                         hx-trigger="load"
+                         mustache-template="header-template"
+                         hx-swap="innerHTML">
+                    </div>
                 </nav>
             </div>
         </header>
 
-        <!-- Content area that gets swapped -->
-        <div id="page-content">
-            <div id="content">
-                <div class="prose prose-invert max-w-none">
-                    <h1>Welcome to OpenAgents</h1>
-                    <p>Software to increase human agency.</p>
-                </div>
+        <template id="header-template">
+            <ul class="grid grid-cols-3 gap-2 lg:grid-cols-6">
+                {{#buttons}}
+                <li class="flex justify-center mb-1">
+                    <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
+                       href="{{href}}"
+                       hx-get="{{href}}"
+                       hx-push-url="true"
+                       hx-target="#content"
+                       hx-select="#content">{{text}}</a>
+                </li>
+                {{/buttons}}
+            </ul>
+        </template>
+
+        <div id="content">
+            <div class="prose prose-invert max-w-none">
+                <h1>Welcome to OpenAgents</h1>
+                <p>Software to increase human agency.</p>
             </div>
         </div>
     </div>
@@ -98,6 +61,30 @@
     <script>
         document.body.addEventListener('htmx:afterSwap', function(evt) {
             window.scrollTo(0, 0);
+        });
+
+        // Prevent template processing during navigation
+        document.body.addEventListener('htmx:beforeSwap', function(evt) {
+            if (evt.detail.target.id === 'content') {
+                evt.detail.shouldSwap = true;
+                evt.detail.isError = false;
+            }
+        });
+
+        // Disable client-side-templates extension for content swaps
+        htmx.defineExtension('client-side-templates', {
+            transformResponse: function(text, xhr, elt) {
+                // Only process JSON responses
+                if (xhr.getResponseHeader('Content-Type') === 'application/json') {
+                    var data = JSON.parse(text);
+                    var templateId = elt.getAttribute('mustache-template');
+                    var template = htmx.find('#' + templateId);
+                    if (template) {
+                        return Mustache.render(template.innerHTML, data);
+                    }
+                }
+                return text;
+            }
         });
     </script>
 </body>
