--- a/static/video-series.html
+++ b/static/video-series.html
@@ -5,85 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
     <meta name="application-name" content="OpenAgents"/>
-    <meta name="description" content="Software to increase human agency."/>
+    <meta name="description" content="Educational video series from OpenAgents"/>
     <meta name="author" content="OpenAgents, Inc.">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="canonical" href="https://openagents.com/video-series"/>
+    <title>Video Series - OpenAgents</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="css/videos-new.css"/>
     <script src="js/htmx.min.js"></script>
     <script src="js/client-side-templates.js"></script>
     <script src="js/mustache.js"></script>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
-<body class="bg-black text-white font-mono max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto" hx-boost="true">
-    <div class="container mx-auto" hx-ext="client-side-templates">
-        <div id="header-container"
+<body class="bg-black text-white font-mono max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
+    <div class="container mx-auto">
+        <!-- Header loaded via template -->
+        <div id="header-container" 
+             hx-ext="client-side-templates"
              hx-get="/templates/header.json"
              hx-trigger="load"
              mustache-template="header-template"
-             hx-preserve="true">
+             hx-swap="innerHTML">
         </div>
 
         <template id="header-template">
-            <header class="py-2 mb-5">
+            <header class="py-2 mb-5" id="static-header">
                 <div class="flex justify-between items-center w-full">
-                    <span class="text-lg font-bold">OpenAgents</span>
+                    <span class="text-lg font-bold">{{header.title}}</span>
                 </div>
                 <div class="mt-4">
                     <nav>
                         <ul class="grid grid-cols-3 gap-2 lg:grid-cols-6" id="nav-buttons">
-                            {{#buttons}}
+                            {{#header.buttons}}
                             <li class="flex justify-center mb-1">
                                 <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
                                    href="{{href}}"
-                                   hx-boost="true"
+                                   hx-get="{{href}}"
                                    hx-push-url="true"
-                                   hx-target="body"
-                                   hx-scroll="false"
-                                   hx-swap="innerHTML">{{text}}</a>
+                                   hx-target="#page-content"
+                                   hx-select="#page-content"
+                                   hx-swap="innerHTML show:top">{{text}}</a>
                             </li>
-                            {{/buttons}}
+                            {{/header.buttons}}
                         </ul>
                     </nav>
                 </div>
             </header>
         </template>
 
-        <div id="content">
-            <div id="videos" 
-                 hx-get="/data/videos.json" 
-                 hx-trigger="load" 
-                 hx-ext="client-side-templates"
-                 mustache-template="videos-template">
-            </div>
-
-            <template id="videos-template">
-                <div class="videos">
-                    <div class="videos-title">Recent Videos</div>
-                    {{#videos}}
-                    <div class="video-entry {{^tweetId}}coming-soon{{/tweetId}}">
-                        <div class="video-title">{{title}}</div>
-                        <div class="video-date">{{date}}</div>
-                        <div class="video-text">{{text}}</div>
-                        {{#tweetId}}
-                        <blockquote class="twitter-tweet" data-conversation="none" data-media-max-width="560" data-theme="dark">
-                            <p lang="en" dir="ltr">Loading X post...</p>
-                            <a href="https://twitter.com/OpenAgentsInc/status/{{tweetId}}?ref_src=twsrc%5Etfw"></a>
-                        </blockquote>
-                        {{/tweetId}}
-                    </div>
-                    {{/videos}}
+        <!-- Content area that gets swapped -->
+        <div id="page-content">
+            <div id="content">
+                <div class="prose prose-invert max-w-none">
+                    <h1 class="text-3xl font-bold mb-4">Video Series</h1>
+                    <p>Watch our educational video series to learn more about AI, technology, and human agency.</p>
                 </div>
-            </template>
+            </div>
         </div>
     </div>
 
     <script>
         document.body.addEventListener('htmx:afterSwap', function(evt) {
-            // Always reload Twitter widgets after any content swap
-            if (window.twttr && window.twttr.widgets) {
-                window.twttr.widgets.load();
-            }
             window.scrollTo(0, 0);
         });
     </script>
