--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,7 @@
                         <ul class="grid grid-cols-3 gap-2 lg:grid-cols-6" id="nav-buttons">
                             {{#header.buttons}}
                             <li class="flex justify-center mb-1">
-                                <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
+                                <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 py-1 border border-white" 
                                    href="{{href}}"
                                    hx-get="{{href}}"
                                    hx-push-url="true"
