--- a/static/changelog.html
+++ b/static/changelog.html
@@ -16,24 +16,38 @@
 
 <body class="bg-black text-white font-mono min-h-screen">
     <div class="container mx-auto max-w-[60rem] px-4">
-        <header class="py-5 border-b border-zinc-800 mb-5">
-            <div class="flex justify-between items-center">
-                <div>
-                    <div class="text-xs font-bold">OpenAgents, Inc.</div>
-                    <p class="text-xs mt-2">Software to increase human agency.</p>
+        <div id="header-container" 
+             hx-ext="client-side-templates"
+             hx-get="/templates/header.json"
+             hx-trigger="load"
+             mustache-template="header-template"
+             hx-swap="innerHTML">
+        </div>
+
+        <template id="header-template">
+            <header class="py-2 mb-5" id="static-header">
+                <div class="flex justify-between items-center w-full">
+                    <span class="text-lg font-bold">{{header.title}}</span>
                 </div>
-                <nav>
-                    <ul class="flex space-x-6">
-                        <li><a href="/" class="text-xs text-white hover:text-zinc-300">Home</a></li>
-                        <li><a href="/company" class="text-xs text-white hover:text-zinc-300">Company</a></li>
-                        <li><a href="/mobile-app" class="text-xs text-white hover:text-zinc-300">Mobile App</a></li>
-                        <li><a href="/business" class="text-xs text-white hover:text-zinc-300">Business Services</a></li>
-                        <li><a href="/video-series" class="text-xs text-white hover:text-zinc-300">Video Series</a></li>
-                        <li><a href="/contact" class="text-xs text-white hover:text-zinc-300">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+                <div class="mt-4">
+                    <nav>
+                        <ul class="grid grid-cols-3 gap-2 lg:grid-cols-6" id="nav-buttons">
+                            {{#header.buttons}}
+                            <li class="flex justify-center mb-1">
+                                <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
+                                   href="{{href}}"
+                                   hx-get="{{href}}"
+                                   hx-push-url="true"
+                                   hx-target="#page-content"
+                                   hx-select="#page-content"
+                                   hx-swap="innerHTML show:top">{{text}}</a>
+                            </li>
+                            {{/header.buttons}}
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+        </template>
 
         <div id="changelog" 
              hx-get="/data/changelog.json" 
