--- a/static/contact.html
+++ b/static/contact.html
@@ -14,6 +14,11 @@
     <script src="js/htmx.min.js"></script>
     <script src="js/client-side-templates.js"></script>
     <script src="js/mustache.js"></script>
+    <style>
+        #header-container {
+            min-height: 140px; /* Adjust this value based on your header's actual height */
+        }
+    </style>
 </head>
 
 <body class="bg-black text-white font-mono max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
